--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>datanucleus-core</artifactId>
-    <version>4.1.2</version>
+    <version>4.1.2-mc0</version>
 
     <name>DataNucleus Core</name>
     <description>
